@@ -6,7 +6,10 @@ import java.security.KeyManagementException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.security.cert.X509Certificate;
+import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 import javax.net.ssl.HostnameVerifier;
@@ -32,6 +35,8 @@ import com.hyperrealm.kiwi.ui.dialog.ExceptionDialog;
  */
 public class RegistryXMLRPCProxy {
 	private static final String GET_AMS = "registryService.getAMs";
+	private static final String GET_IMAGES = "registryService.getAllImages";
+	private static final String GET_DEFAULT_IMAGE = "registryService.getDefaultImage";
 	
 	// fields returned by the registry for actors
 	public enum Field {
@@ -160,5 +165,31 @@ public class RegistryXMLRPCProxy {
 		if (!m.containsKey(k))
 			return null;
 		return m.get(k).get(f.getName());
+	}
+	
+	@SuppressWarnings("unchecked")
+	public List<Map<String, String>> getImages() throws Exception {
+		List<Map<String, String>> ret = null;
+		
+		try {
+			XmlRpcClientConfigImpl config = new XmlRpcClientConfigImpl();
+			config.setServerURL(new URL(GUI.getInstance().getPreference(GUI.PrefsEnum.ORCA_REGISTRY)));
+			XmlRpcClient client = new XmlRpcClient();
+			client.setConfig(config);
+		
+			// get verbose list of the AMs
+			Object[] rret = (Object[])client.execute(GET_IMAGES, new Object[]{});
+			ret = new ArrayList<Map<String, String>>();
+			for (Object n: rret) {
+				if (n instanceof HashMap<?, ?>) {
+					ret.add((HashMap<String, String>)n);
+				}
+			}
+		} catch (MalformedURLException e) {
+			throw new Exception("Please check the registry URL " + GUI.getInstance().getPreference(GUI.PrefsEnum.ORCA_REGISTRY));
+		} catch (XmlRpcException e) {
+			throw new Exception("Unable to contact registry " + GUI.getInstance().getPreference(GUI.PrefsEnum.ORCA_REGISTRY) + " due to " + e);
+		}
+		return ret;
 	}
 }
